# SRE

./: .gitignore  Dockerfile  README.md  api.py  check_space_release.py  environment.py  generate_dataset.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  rewards.py  state_machine.py  validate-submission.ps1  validate-submission.sh  verify_sre_bench.py
.github/workflows/: sync-space.yml
data/: incidents.json
server/: __init__.py  app.py
tasks/: __init__.py  manifest_graders.py  score_utils.py  task1.py  task2.py  task3.py
tests/: test_api.py  test_api_startup.py  test_check_space_release.py  test_environment.py  test_graders.py  test_inference_contract.py  test_models.py  test_openenv_compat.py  test_packaging_contract.py  test_state_machine.py  test_sync_space_workflow.py
