[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sre-bench"
version = "1.0.0"
description = "Deterministic RL environment for SRE on-call incident response."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.110.0",
  "uvicorn[standard]==0.29.0",
  "pydantic==2.7.0",
  "networkx==3.3",
  "faker==24.11.0",
  "openai==1.30.0",
  "pytest==8.2.0",
  "pytest-cov==5.0.0",
  "hypothesis==6.103.0",
  "httpx==0.27.0",
  "mypy==1.10.0",
  "ruff==0.4.4",
  "black==24.4.2",
]

[tool.setuptools]
py-modules = [
  "api",
  "environment",
  "generate_dataset",
  "inference",
  "models",
  "rewards",
  "state_machine",
  "verify_sre_bench",
]

[tool.setuptools.packages.find]
include = ["tasks*"]

[tool.pytest.ini_options]
addopts = "--cov=. tests/"
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
